[package]
name = "tethys"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
once_cell = "1.21.3"

tokio = { version = "1.47", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time", "local-time"] }

sqlx = { version = "0.8.6", features = ["mysql", "chrono", "runtime-tokio-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"